--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
     <div class="container">
 
      <a href="#" class="logo">
-      <span class="logo-light">Taller Centeno</span>
-      <span class="logo-dark">Taller Centeno</span>
+      <span class="logo-light">Torno</span>
+      <span class="logo-dark">Torno</span>
     </a>
     
 
@@ -59,7 +59,8 @@
 
         <div class="navbar-top">
           <a href="#" class="logo">
-            <img src="./assets/images/logo-light.svg" width="74" height="24" alt="Adex home">
+            <!-- <img src="./assets/images/logo-light.svg" width="74" height="24" alt="Adex home"> -->
+            <span class="logo-light">Torno</span>
           </a>
 
           <button class="nav-close-btn" aria-label="close menu" data-nav-toggler>
